--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://w7k-j.github.io/
+  github: https://github.com/W7k-J
   instagram:
   linkedin: https://www.linkedin.com/in/wandzilak/
   pinterest:
