--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/W7k-J
+  github: W7k-J
   instagram:
-  linkedin: https://www.linkedin.com/in/wandzilak/
+  linkedin: wandzilak
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
