--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: W7k-J
+  github: 
   instagram:
-  linkedin: wandzilak
+  linkedin: #wandzilak
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
