--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ description: solutions for architecture, construction & information
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: jw@w7k.pl
   facebook:
   flickr:
   github: 
   instagram:
-  linkedin: #wandzilak
+  linkedin: wandzilak
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
